# demucs

./: audio_preprocessing.ipynb  pyproject.toml  vocal_separation.py
.ipynb_checkpoints/: audio_preprocessing-checkpoint.ipynb
demucs/: audio.py  separate.py
